[package]
name = "cryptopals-web"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
tracing = "0.1.37"
tracing-test = "0.2.4"
session_types = "0.3.1"
sha1 = "0.10.5"
digest = "0.10.7"
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
rand = "0.8.5"
all_asserts = "2.3.1"
ring = "0.16.20"
openssl = "0.10.55"
data-encoding = "2.4.0"
srp = "0.6.0"
sha2 = "0.10.7"
firestorm = { version = "0.5.1", features = ["enable_system_time"] }
subtle = "2.5.0"
criterion = "0.5.1"
pprof = { version = "0.12.1", features = ["flamegraph", "criterion"] }
aes = "0.8.3"
xor = "1.4.5"
base64 = "0.21.3"
rustc-serialize = "0.3.24"
rust-crypto = "0.2.36"
num = { version = "0.4.1", features = ["num-bigint"] }

[profile.bench]
debug = true

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
